k8s/tlsingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app-ingress
  namespace: php-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - assignmentcnas.com
    secretName: letsencrypt-staging
  rules:
  - host: assignmentcnas.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-app
            port:
              number: 80
