k8s/DenyAllAccessNetworkPolicy.yaml
# Deny all namespace access
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: mysql-db
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
