k8s/NetworkPolicy.yaml
# Allow php-app namespace access to mysql-db
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-php-mysql-access
  namespace: mysql-db
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              access: php-app
      ports:
        - protocol: TCP
          port: 3306
  policyTypes:
    - Ingress
